--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,26 +1,43 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+
 }
+h1,h2,h3{  font-family: 'Subscribe Regular';}
+
+
+@font-face {
+  font-family: 'Subscribe Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Subscribe Regular'), url('/assets/fonts/Subscribe.woff') format('woff');
+}
+
+/* Italic */
+@font-face {
+  font-family: 'Subscribe Italic';
+  font-style: italic;
+  font-weight: normal;
+  src: local('Subscribe Italic'), url('/assets/fonts/Subscribe-Italic.woff') format('woff');
+}
+
+/* Shadow Regular */
+@font-face {
+  font-family: 'Subscribe Shadow Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Subscribe Shadow Regular'), url('/assets/fonts/SubscribeShadow.woff') format('woff');
+}
+
+/* Shadow Italic */
+@font-face {
+  font-family: 'Subscribe Shadow Italic';
+  font-style: italic;
+  font-weight: normal;
+  src: local('Subscribe Shadow Italic'), url('/assets/fonts/SubscribeShadow-Italic.woff') format('woff');
+}
+
+
+
