--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,7 @@
 body {
   background: var(--background);
   color: var(--foreground);
+  overflow-x: hidden;
 
 }
 h1,h2,h3{  font-family: 'Subscribe Regular';}
@@ -41,3 +42,20 @@ h1,h2,h3{  font-family: 'Subscribe Regular';}
 
 
 
+
+@keyframes tpupdown {
+  0% {
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
+    transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-20px);
+    -moz-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    -o-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+}
