--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ body {
 
 }
 h1,h2,h3{  font-family: 'Subscribe Regular';}
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 @font-face {
   font-family: 'Subscribe Regular';
@@ -111,4 +111,10 @@ h1,h2,h3{  font-family: 'Subscribe Regular';}
   100% {
     transform: translateX(-50%);
   }
+}
+.dm-sans-uniquifier {
+  font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: weight;
+  font-style: normal;
 }
