--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   overflow-x: hidden;
+  transition: opacity 0.2s;
 
 }
 h1,h2,h3{  font-family: 'Subscribe';}
