--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,13 @@ body {
   transition: opacity 0.2s;
 
 }
-h1,h2,h3{  font-family: 'Subscribe';}
+
+h1,
+h2,
+h3 {
+  font-family: 'Subscribe';
+}
+
 /* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'); */
 /* Regular */
 @font-face {
@@ -50,6 +56,7 @@ h1,h2,h3{  font-family: 'Subscribe';}
     -o-transform: translateY(0);
     transform: translateY(0);
   }
+
   100% {
     -webkit-transform: translateY(-20px);
     -moz-transform: translateY(-20px);
@@ -58,32 +65,31 @@ h1,h2,h3{  font-family: 'Subscribe';}
     transform: translateY(-20px);
   }
 }
-/* From Uiverse.io by PriyanshuGupta28 */ 
+
+/* From Uiverse.io by PriyanshuGupta28 */
 .marquee {
   overflow: hidden;
   /* hide the scrolling overflow */
   width: 100%;
-  -webkit-mask-image: linear-gradient(
-    to right,
-    transparent 0%,
-    black 10%,
-    black 90%,
-    transparent 100%
-  );
-  mask-image: linear-gradient(
-    to right,
-    transparent 0%,
-    black 10%,
-    black 90%,
-    transparent 100%
-  );
+  -webkit-mask-image: linear-gradient(to right,
+      transparent 0%,
+      black 10%,
+      black 90%,
+      transparent 100%);
+  mask-image: linear-gradient(to right,
+      transparent 0%,
+      black 10%,
+      black 90%,
+      transparent 100%);
 }
+
 .marquee_header {
   font-size: 35px;
   font-weight: 800;
   text-align: center;
   margin-bottom: 20px;
 }
+
 .marquee__inner {
   display: flex;
   width: max-content;
@@ -107,10 +113,12 @@ h1,h2,h3{  font-family: 'Subscribe';}
   0% {
     transform: translateX(0);
   }
+
   100% {
     transform: translateX(-50%);
   }
 }
+
 .dm-sans-uniquifier {
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
@@ -118,17 +126,19 @@ h1,h2,h3{  font-family: 'Subscribe';}
   font-style: normal;
 }
 
-.recharts-wrapper{
-  width: 450px!important;
- 
-}
- @media(max-width:768px){
-.recharts-wrapper{
-    width: 300px!important;
+.recharts-wrapper {
+  width: 450px !important;
 
 }
+
+@media(max-width:768px) {
+  .recharts-wrapper {
+    width: 330px !important;
+
   }
-  .game-drop {
+}
+
+.game-drop {
   animation: gameDrop 0.6s cubic-bezier(0.2, 0.8, 0.2, 1) forwards;
   transform-origin: top;
   opacity: 0;
@@ -140,7 +150,7 @@ h1,h2,h3{  font-family: 'Subscribe';}
     opacity: 0;
     clip-path: inset(0 0 100% 0);
   }
-  
+
   60% {
     transform: translateY(0px) scale(1.05);
     opacity: 1;
